[gd_scene load_steps=3 format=2]

[ext_resource path="res://PhaseBuild/Scripts/input_handler.gd" type="Script" id=1]
[ext_resource path="res://PhaseBuild/Scripts/builder.gd" type="Script" id=2]

[node name="Root" type="Node2D"]

[node name="InputHandler" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Builder" type="Node2D" parent="."]
script = ExtResource( 2 )
[connection signal="place_trap" from="InputHandler" to="Builder" method="_on_InputHandler_place_trap"]
[connection signal="select_next_trap" from="InputHandler" to="Builder" method="_on_InputHandler_select_next_trap"]
[connection signal="select_prev_trap" from="InputHandler" to="Builder" method="_on_InputHandler_select_prev_trap"]
[connection signal="select_trap" from="InputHandler" to="Builder" method="_on_InputHandler_select_trap"]
